# glossia

./: .CLAUDE.md  .env.example  .gitignore  COMPONENT_ARCHITECTURE.md  Cargo.toml  KNOWN_WORDS_FEATURE_PLAN.md  README_SETUP.md  agent.md  test_manual_words.md
app/: Cargo.toml
app/assets/fonts/: spectral.css
app/src/: main.rs  theme.rs  utils.rs  vocabulary.rs
app/src/components/: app.rs  app_refactored.rs  clickable_word.rs  error_display.rs  floating_button.rs  known_words_counter.rs  known_words_modal.rs  main_content.rs  mod.rs  navigation_controls.rs  progress_bar.rs  reading_container.rs  styles.rs  text_input_modal.rs  text_renderer.rs  theme_toggle.rs  token_highlighter.rs  top_controls.rs  word_meaning_item.rs  word_meanings.rs
app/src/components/common/: mod.rs
app/src/components/common/modals/: mod.rs  modal.rs
app/src/components/features/: mod.rs
app/src/components/features/clipboard/: clipboard_toast.rs  mod.rs
app/src/components/features/gallery/: image_gallery.rs  image_gallery_styles.rs  mod.rs
app/src/components/features/modals/: mod.rs  modal_manager.rs  text_input_modal.rs
app/src/components/features/navigation/: keyboard_handler.rs  mod.rs
app/src/components/features/reading/: content_display.rs  loading_state.rs  mod.rs  navigation_controls.rs  reading_container.rs  reading_layout.rs  sentence_processor.rs  skeleton_loaders.rs
app/src/components/features/vocabulary/: empty_state.rs  known_words_modal.rs  known_words_modal_styles.rs  mod.rs  modal_header.rs  search_bar.rs  word_grid.rs  word_meaning_item.rs  word_meanings_styles.rs
app/src/components/layout/: app_layout.rs  mod.rs
app/src/hooks/: mod.rs  use_app_state.rs  use_clipboard_monitor.rs  use_error_boundary.rs  use_image_cache.rs  use_reading_state.rs  use_simplification.rs  use_vocabulary.rs  use_word_meaning_effect.rs  use_word_meanings.rs  use_word_tracking.rs
app/src/services/: image_service.rs  mod.rs
app/src/utils/: mod.rs  text_utils.rs  word_utils.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: brave_client.rs  lib.rs  openai_client.rs  retry_service.rs  tests.rs  traits.rs
crates/book-reader/: Cargo.toml
crates/book-reader/src/: cache_manager.rs  lib.rs  navigation_state.rs  service.rs  tests.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: base_client.rs  circuit_breaker.rs  lib.rs  rate_limiter.rs  request_tracker.rs  retry_service.rs
crates/image-client/: Cargo.toml
crates/image-client/src/: brave_provider.rs  config.rs  factory.rs  image_trait.rs  lib.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: claude_provider.rs  config.rs  factory.rs  lib.rs  llm_trait.rs  openai_provider.rs
crates/logging/: Cargo.toml
crates/logging/src/: config.rs  context.rs  lib.rs  macros.rs
crates/navigation-service/: Cargo.toml
crates/navigation-service/src/: history_manager.rs  lib.rs  navigation_trait.rs  position_tracker.rs  text_loader.rs
crates/reading-engine/: Cargo.toml
crates/reading-engine/src/: cache_engine.rs  lib.rs  reading_orchestrator.rs  state_manager.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  types.rs
crates/text-parser/: Cargo.toml
crates/text-parser/src/: lib.rs
crates/vocabulary-manager/: Cargo.toml
crates/vocabulary-manager/src/: known_words_filter.rs  lib.rs  manual_words.rs  vocabulary_trait.rs  word_tracker.rs
logs/: .684d0ae17ccdb56925f9023c54dd60ec49cd4adc-audit.json
