[workspace]
members = ["app", "crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dioxus = { version = "0.5.1" }
dioxus-desktop = { version = "0.5.1" }
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.19"
async-trait = "0.1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.0", features = ["v4"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
