[package]
name = "glossia-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
dioxus-desktop = { workspace = true }
glossia-book-reader = { path = "../crates/book-reader" }
glossia-shared = { path = "../crates/shared" }
regex = "1.0"
futures-util = "0.3"
serde = { workspace = true }

[dev-dependencies]
dioxus-hot-reload = { version = "0.5.1" }
