[package]
name = "glossia-http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
glossia-shared = { path = "../shared" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
