[package]
name = "glossia-llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
glossia-shared = { path = "../shared" }
glossia-http-client = { path = "../http-client" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4"
