[package]
name = "glossia-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["sync"] }
once_cell = "1.19"