[package]
name = "glossia-vocabulary-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
glossia-shared = { path = "../shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.0"
